Mejoras para guardar datos

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                 <button class="action-button" onclick="previsualizarDatos('tareas')">Previsualizar Tareas</button>
                 <button class="action-button" onclick="previsualizarDatos('preventivos')">Previsualizar Preventivos</button>
                 <button class="action-button" onclick="previsualizarDatos('planned-work')">Previsualizar Planned Work</button>
+                <button class="action-button warning-button" onclick="borrarDatosAlmacenados()">Borrar datos almacenados</button>
             </div>
             
             <div class="preview-container">
