--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <div class="task-table-container">
         <table id="tabla-tareas">
             <thead>
+                <h3>Tareas cargadas</h3>
                 <tr>
                     <th>TaskKey</th>
                     <th>Descripción</th>
