mejora en visualización mantenimiento

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
                     <option value="Anual">Anual</option>
                 </select>
             </div>
+
+            <!-- Añadir después del selector de periodicidad -->
+<div class="context-panel" id="plan-context-panel">
+    <div class="context-item">
+        <strong>Equipamiento actual:</strong> <span id="current-equipment-display">No seleccionado</span>
+    </div>
+    <div class="context-item">
+        <strong>Plan actual:</strong> <span id="current-plan-display">Nuevo plan</span>
+    </div>
+    <div class="context-item">
+        <span id="current-mode-indicator" class="mode-indicator creation-mode">Modo: Creación</span>
+    </div>
+</div>
             
            <div class="form-group">
     <h4>Tareas del Plan</h4>
