--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <tr>
                             <th>Key</th>
                             <th>Descripción</th>
+                            <th>Plan | Prev.</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
