--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Datos GMAO</title>
+    <p>Una herramienta especializada para crear y gestionar equipamientos, planes de mantenimiento y preventivos para su fácil importación al sistema Value Keep GMAO.</p>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,6 +49,7 @@
             
             <div class="table-container">
                 <h3>Equipamientos Agregados</h3>
+                <p>Refresca la web para mantener esta tabla actualizada (presiona F5)</p>
                 <table id="tabla-equipamientos" aria-label="Equipamientos agregados">
                     <thead>
                         <tr>
