--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         
         <div id="exportar" class="tab-content">
             <h2>Exportar Datos</h2>
-            <p>Todos los datos que se previsualizan aquí, permiten copiar las columnas esenciales que necesita la base de datos para ser importada a Value Keep, solicita cualquier adición.</p>
+            <p>Todos los datos que se previsualizan aquí, permiten copiar las columnas esenciales que necesita la base de datos para ser importada a Value Keep, solicítame cualquier columna o función extra si hace falta.</p>
                 <div class="export-options">
                 <button class="action-button" onclick="previsualizarDatosExcel('equipamientos')">Previsualizar Equipamientos</button>
                 <button class="action-button" onclick="previsualizarDatosExcel('planes')">Previsualizar Planes</button>
