--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         <div id="exportar" class="tab-content">
             <h2>Exportar Datos</h2>
             <p>Todos los datos que se previsualizan aquí, permiten copiar las columnas esenciales que necesita la base de datos para ser importada a Value Keep, solicítame cualquier columna o función extra si hace falta.</p>
+            <p>Puedes exportar para hacer un backup y llevar tus datos a cualquier otro ordenador incluso.</p>
                 <div class="export-options">
                 <button class="action-button" onclick="previsualizarDatosExcel('equipamientos')">Previsualizar Equipamientos</button>
                 <button class="action-button" onclick="previsualizarDatosExcel('planes')">Previsualizar Planes</button>
