cambiar un texto

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="form-group">
                 <label for="equipamiento-plan">Seleccionar Equipamiento:</label>
                 <select id="equipamiento-plan" required>
-                    <option value="">-- Seleccionar equipamiento --</option>
+                    <option value="">-- Todos los equipamientos --</option>
                 </select>
             </div>
             
@@ -172,7 +172,7 @@
             <div class="form-group">
                 <label for="equipamiento-preventivo">Seleccionar Equipamiento:</label>
                 <select id="equipamiento-preventivo" required>
-                    <option value="">-- Seleccionar equipamiento --</option>
+                    <option value="">-- Todos los equipamientos --</option>
                 </select>
             </div>
             
