Cambio de título

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
             
             <div class="table-container">
-                <h3>Equipamientos Agregados</h3>
+                <h3>LISTADO EQUIPOS DE TRABAJO</h3>
+                <h4>F01.P07 Listado de equipos trabajo, enero 2025</h4>
                 <p>Refresca la web para mantener esta tabla actualizada (presiona F5)</p>
                 <table id="tabla-equipamientos" aria-label="Equipamientos agregados">
                     <thead>
