--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Datos GMAO</title>
+    <title>Control de equipos y gestión del GMAO VK</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Generador de Datos GMAO</h1>
-        <p>Una herramienta especializada para crear y gestionar equipamientos, planes de mantenimiento y preventivos para su fácil importación al sistema Value Keep GMAO.</p>
+        <h1>Control de equipos y gestión del GMAO VK</h1>
+        <center><p>Una herramienta especializada para crear y gestionar equipamientos, planes de mantenimiento y preventivos para su fácil importación al sistema Value Keep GMAO.</p></center>
         <div class="tabs">
             <button class="tab-button active" onclick="openTab('equipamientos')">1. Equipamientos</button>
             <button class="tab-button" onclick="openTab('planes')">2. Planes de Mantenimiento</button>
