--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                             <th>Descripción</th>
                             <th>Plan | Prev.</th>
                             <th>Acciones</th>
+                            <th>Próximamente...</th>
                         </tr>
                     </thead>
                     <tbody id="equipamientos-body"></tbody>
