mejoras fecha actualizada 1

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             <th>Key</th>
                             <th>Descripción</th>
                             <th>Plan | Prev.</th>
+                            <th>Última modificación</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
