--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de equipos y gestión del GMAO VK</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://jhonyalex.github.io/PigmeaProduccionV2/logo1x1.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
