--- a/index.html
+++ b/index.html
@@ -94,8 +94,16 @@
                     <option value="Mensual">Mensual</option>
                     <option value="Trimestral">Trimestral</option>
                     <option value="Semestral">Semestral</option>
-                    <option value="Anual">Anual</option>
+                <option value="Anual">Anual</option>
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label for="plan-existente">Asignar Plan(es) Existente(s):</label>
+                <select id="plan-existente" multiple size="5">
+                    <option value="">-- Seleccionar Plan --</option>
+                </select>
+                <button type="button" class="action-button" onclick="asignarPlanAEquipamiento()">Asignar al Equipamiento</button>
             </div>
 
             <!-- Añadir después del selector de periodicidad -->
@@ -155,6 +163,7 @@
                     <thead>
                         <tr>
                             <th>Plan Key</th>
+                            <th>Equipo</th>
                             <th>Descripción</th>
                             <th>Tareas</th>
                             <th>Acciones</th>
