--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                     <option value="Semanal">Semanal</option>
                     <option value="Quincenal">Quincenal</option>
                     <option value="Mensual">Mensual</option>
+                    <option value="Bimestral">Bimestral</option>
                     <option value="Trimestral">Trimestral</option>
                     <option value="Semestral">Semestral</option>
-                <option value="Anual">Anual</option>
+                    <option value="Anual">Anual</option>
                 </select>
             </div>
 
